<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:background="@drawable/layout_backgroun_cardview_button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="end"
                android:text="Pedido: "
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/identificador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="1234234"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="Estado"
                    android:layout_weight="2"
                    android:textSize="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_purple"/>

                <TextView
                    android:id="@+id/campo_estado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_orange_dark"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trasportista"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:textSize="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_purple" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="1dp"
                    android:layout_weight="2">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/nombre_trasportista"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:hint="@string/nombre_trasportista" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/campo_empresa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/empresa" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha_de_recogida" />

                        <TextView
                            android:id="@+id/fecha_recogida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:hint="@string/fecha_de_recogida" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha_de_entrega" />

                        <TextView
                            android:id="@+id/fecha_entrega"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:hint="@string/fecha_de_entrega"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:text="Datos Pedido"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_orange_dark"/>




            </LinearLayout>

    <!--
            <Button
                android:id="@+id/button_firmar_entrega"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:text="Firmar Entrega"
                android:textSize="13dp"
                android:background="@drawable/layout_backgroun_cardview_button"/>
                -->

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>